# plausible-rs

./: .gitignore  Cargo.toml  README.md
examples/: event.rs  health.rs
src/: error.rs  lib.rs  plausible_analytics.rs
src/api/: event.rs  health.rs  mod.rs
src/api/event/: event_headers.rs  event_payload.rs  event_payload_builder.rs  mod.rs  prop_value.rs
src/api/v1/: mod.rs
src/api/v1/sites/: create.rs  delete.rs  delete_goal.rs  get.rs  mod.rs  update_goals.rs  update_shared_links.rs
src/api/v1/stats/: aggregate.rs  breakdown.rs  mod.rs  realtime_visitors.rs  timeseries.rs
src/endpoints/: mod.rs
src/endpoints/events/: event.rs  mod.rs
tests/: event.rs  health.rs
