[package]
name = "plausible-rs"
version = "0.1.5"
edition = "2024"
rust-version = "1.85"
authors = ["Todd Everett Griffin <tgriffin115@gmail.com>"]
repository = "https://github.com/goddtriffin/plausible-rs"
homepage = "https://www.toddgriffin.me/"
description = "A Rust library for the Plausible Analytics API."
license = "MIT"
keywords = ["plausible", "analytics", "api", "http", "client"]
categories = ["web-programming", "api-bindings"]
include = ["**/*.rs", "Cargo.toml", ".clippy.toml", "LICENSE", "README.md"]

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code = { level = "forbid", priority = 1 }
unfulfilled_lint_expectations = { level = "forbid", priority = 1 }

[lints.clippy]
allow_attributes = { level = "forbid", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
nursery = { level = "allow", priority = 0 }
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[dependencies]
# tokio
tokio = { version = "1.43.0", features = ["full"] }

# http request
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
bytes = "1.10.0"

# serde
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
